# Conway-game-of-life

./: CMakeLists.txt  README.md  gen.txt
include/: data.hpp  game.hpp  graphics.hpp  matrix.hpp  sync.hpp  task.hpp  worker.hpp
src/: data.cpp  game.cpp  graphics.cpp  main.cpp  worker.cpp
